Update index.html .html

--- a/index.html .html
+++ b/index.html .html
@@ -13,7 +13,19 @@
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
         }
 
-        body {
+        body
+    <!-- START Navigation - ADD THIS -->
+    <div style="background:#2c3e50; padding:15px; text-align:center;">
+        <a href="index.html" style="color:white; margin:0 15px; text-decoration:none;">Calculator</a>
+        <a href="about.html" style="color:white; margin:0 15px; text-decoration:none;">About</a>
+        <a href="contact.html" style="color:white; margin:0 15px; text-decoration:none;">Contact</a>
+        <a href="privacy-policy.html" style="color:white; margin:0 15px; text-decoration:none;">Privacy</a>
+        <a href="disclaimer.html" style="color:white; margin:0 15px; text-decoration:none;">Disclaimer</a>
+    </div>
+    <!-- END Navigation -->
+    
+    <h1>Smart Mortgage Calculator</h1>
+    ... (rest of your existing code) ...{
             background: linear-gradient(135deg, #f5f7fa 0%, #c3cfe2 100%);
             color: #333;
             line-height: 1.6;
