--- a/index.html .html
+++ b/index.html .html
@@ -13,7 +13,9 @@
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
         }
 
-        body
+        </style>
+</head>
+    <body>
     <!-- START Navigation - ADD THIS -->
     <div style="background:#2c3e50; padding:15px; text-align:center;">
         <a href="index.html" style="color:white; margin:0 15px; text-decoration:none;">Calculator</a>
